--- a/MessageProcessing.TestEngine/ExceptionMessages.resx
+++ b/MessageProcessing.TestEngine/ExceptionMessages.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Scenario_IndexNegative" xml:space="preserve">
-    <value>The index cannot be negative: {0}.</value>
+  <data name="ScenarioClock_RequestNotFound" xml:space="preserve">
+    <value>No request for a date or time was found at the specified index: {0}.</value>
+  </data>
+  <data name="Scenario_DomainEventNotFound" xml:space="preserve">
+    <value>No domain-event was found at the specified index: {0}.</value>
   </data>
 </root>
