--- a/MessageProcessor.Core/Resources/ExceptionMessages.resx
+++ b/MessageProcessor.Core/Resources/ExceptionMessages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ClockScope_IncorrectNesting" xml:space="preserve">
+    <value>The clock-scopes aren't nested correctly.</value>
+  </data>
   <data name="DomainException_CommandFailed" xml:space="preserve">
     <value>Command '{0}' failed because it caused a DomainException to occur.</value>
   </data>
