--- a/MessageProcessor.Core/Resources/ExceptionMessages.resx
+++ b/MessageProcessor.Core/Resources/ExceptionMessages.resx
@@ -126,8 +126,8 @@
   <data name="ClockScope_IncorrectNesting" xml:space="preserve">
     <value>The clock-scopes aren't nested correctly.</value>
   </data>
-  <data name="DomainException_CommandFailed" xml:space="preserve">
-    <value>Command '{0}' failed because it caused a DomainException to occur.</value>
+  <data name="DomainModelException_CommandFailed" xml:space="preserve">
+    <value>Command '{0}' failed.</value>
   </data>
   <data name="UnitOfWorkContext_FailedToEnlistUnitOfWork" xml:space="preserve">
     <value>Failed to enlist '{0}' because no context was found.</value>
