--- a/MessageProcessor.Core/Resources/ExceptionMessages.resx
+++ b/MessageProcessor.Core/Resources/ExceptionMessages.resx
@@ -129,6 +129,9 @@
   <data name="DomainModelException_CommandFailed" xml:space="preserve">
     <value>Command '{0}' failed.</value>
   </data>
+  <data name="EventSourcedAggregate_HandlerAlreadyRegistered" xml:space="preserve">
+    <value>A handler for event '{0}' has already been registered.</value>
+  </data>
   <data name="UnitOfWorkContext_FailedToEnlistUnitOfWork" xml:space="preserve">
     <value>Failed to enlist '{0}' because no context was found.</value>
   </data>
