--- a/MessageProcessor/Resources/ExceptionMessages.resx
+++ b/MessageProcessor/Resources/ExceptionMessages.resx
@@ -123,4 +123,13 @@
   <data name="MessageHandlerClass_InvalidInstanceLifetimeMode" xml:space="preserve">
     <value>Invalid InstanceLifetime was specified on class '{0}': {1}. </value>
   </data>
+  <data name="MessageProcessor_FactoryNotSet" xml:space="preserve">
+    <value>This method is not supported because the factory required to instantiate the appropriate MessageHandlers was not set.</value>
+  </data>
+  <data name="Message_InvalidOption" xml:space="preserve">
+    <value>Unknown value of type '{0}' specified: {1}.</value>
+  </data>
+  <data name="Message_IsReadOnly" xml:space="preserve">
+    <value>Cannot mark message '{0}' as changed because it is marked readonly.</value>
+  </data>
 </root>
