--- a/MessageProcessor.Clients/Resources/ExceptionMessages.resx
+++ b/MessageProcessor.Clients/Resources/ExceptionMessages.resx
@@ -117,31 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="MessageHanderPipeline_MultipleAttributesFound" xml:space="preserve">
-    <value>Multiple attributes of the specified type were found when only a single was expected: {0}.</value>
+  <data name="Connection_AlreadyClosed" xml:space="preserve">
+    <value>The connection is already closed.</value>
   </data>
-  <data name="MessageHandlerClass_InvalidInstanceLifetimeMode" xml:space="preserve">
-    <value>Invalid InstanceLifetime was specified on class '{0}': {1}. </value>
+  <data name="Connection_AlreadyOpen" xml:space="preserve">
+    <value>The connection is already open.</value>
   </data>
-  <data name="MessageProcessor_FactoryNotSet" xml:space="preserve">
-    <value>This method is not supported because the factory required to instantiate the appropriate MessageHandlers was not set.</value>
-  </data>
-  <data name="Message_InvalidOption" xml:space="preserve">
-    <value>Unknown value of type '{0}' specified: {1}.</value>
-  </data>
-  <data name="Message_IsReadOnly" xml:space="preserve">
-    <value>Cannot mark message '{0}' as changed because it is marked readonly.</value>
-  </data>
-  <data name="QueryCacheValueLifetime_AlreadyStarted" xml:space="preserve">
-    <value>Cannot start this lifetime because it has been already started once.</value>
-  </data>
-  <data name="QueryCacheValueLifetime_OtherAlreadyStarted" xml:space="preserve">
-    <value>Cannot combine this lifetime with the other because the other has already started.</value>
-  </data>
-  <data name="QueryCacheValueLifetime_ThisAlreadyStarted" xml:space="preserve">
-    <value>Cannot combine this lifetime with another because it has already started.</value>
-  </data>
-  <data name="TimerBasedLifetime_ZeroLifetime" xml:space="preserve">
-    <value>The length of a lifetime cannot be zero.</value>
+  <data name="OneToOneCommand_OtherAlreadyConnected" xml:space="preserve">
+    <value>Cannot open connection because another command has already opened its connection.</value>
   </data>
 </root>
