--- a/MessageProcessor/Resources/ExceptionMessages.resx
+++ b/MessageProcessor/Resources/ExceptionMessages.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Connection_AlreadyClosed" xml:space="preserve">
+    <value>The connection is already closed.</value>
+  </data>
+  <data name="Connection_AlreadyOpen" xml:space="preserve">
+    <value>The connection is already open.</value>
+  </data>
+  <data name="InvalidCommandException_Message" xml:space="preserve">
+    <value>Command '{0}' could not be executed because it was invalid.</value>
+  </data>
+  <data name="InvalidCommandException_MessageWithErrors" xml:space="preserve">
+    <value>Command '{0}' could not be executed because it was invalid. Errors: {1}.</value>
+  </data>
   <data name="MessageHanderPipeline_MultipleAttributesFound" xml:space="preserve">
     <value>Multiple attributes of the specified type were found when only a single was expected: {0}.</value>
   </data>
