--- a/MessageProcessor.UnitOfWork/Resources/ExceptionMessages.resx
+++ b/MessageProcessor.UnitOfWork/Resources/ExceptionMessages.resx
@@ -147,6 +147,9 @@
   <data name="Message_IsReadOnly" xml:space="preserve">
     <value>Cannot mark message '{0}' as changed because it is marked readonly.</value>
   </data>
+  <data name="Message_ServiceAlreadyRegistered" xml:space="preserve">
+    <value>A service of type '{0}' was already registered.</value>
+  </data>
   <data name="UnitOfWorkContext_FailedToEnlistUnitOfWork" xml:space="preserve">
     <value>Failed to enlist '{0}' because no context was found.</value>
   </data>
