--- a/Messaging/Resources/ExceptionMessages.resx
+++ b/Messaging/Resources/ExceptionMessages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AggregateNotFoundException_Message" xml:space="preserve">
+    <value>No aggregate of type '{0}' with the specified key ({1}) was found.</value>
+  </data>
   <data name="AggregateVersion_InvalidType" xml:space="preserve">
     <value>Invalid type specified for comparison. Expected '{0}' but was '{1}'.</value>
   </data>
