- Added the first piece of the Validation-namespace.

--- a/Messaging/Resources/ValidationMessages.resx
+++ b/Messaging/Resources/ValidationMessages.resx
@@ -117,103 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AggregateNotFoundException_Message" xml:space="preserve">
-    <value>No aggregate of type '{0}' with the specified key ({1}) was found.</value>
-  </data>
-  <data name="AggregateVersion_InvalidType" xml:space="preserve">
-    <value>Invalid type specified for comparison. Expected '{0}' but was '{1}'.</value>
-  </data>
-  <data name="AsyncExecutionTask_TaskAlreadyStarted" xml:space="preserve">
-    <value>Cannot execute this task because it was already executed or canceled.</value>
-  </data>
-  <data name="BufferedEventBus_NoBusAvailable" xml:space="preserve">
-    <value>Cannot publish event of type '{0}' because no bus is currently available. Make sure all publishing takes place inside a UnitOfWorkScope.</value>
-  </data>
-  <data name="CacheRelay_NotAvailable" xml:space="preserve">
-    <value>Cannot perform the operation because the cache is currently not available.</value>
-  </data>
-  <data name="Comparable_IncompatbileType" xml:space="preserve">
-    <value>The specified object of type '{0}' cannot be compared to instance of type '{1}'."</value>
-  </data>
-  <data name="Connection_AlreadyClosed" xml:space="preserve">
-    <value>The connection is already closed.</value>
-  </data>
-  <data name="Connection_AlreadyOpen" xml:space="preserve">
-    <value>The connection is already open.</value>
-  </data>
-  <data name="DateTimeVersion_Overflow" xml:space="preserve">
-    <value>The timestamp could not be incremented because it already has the maximum allowed value.</value>
-  </data>
-  <data name="DomainModelException_CommandFailed" xml:space="preserve">
-    <value>Command '{0}' failed.</value>
-  </data>
-  <data name="EventSourcedAggregate_HandlerAlreadyRegistered" xml:space="preserve">
-    <value>A handler for event '{0}' has already been registered.</value>
-  </data>
-  <data name="IntXXVersion_NegativeValue" xml:space="preserve">
-    <value>Version cannot be negative: {0}.</value>
-  </data>
-  <data name="InvalidCommandException_Message" xml:space="preserve">
-    <value>Command '{0}' could not be executed because it was invalid.</value>
-  </data>
-  <data name="InvalidCommandException_MessageWithErrors" xml:space="preserve">
-    <value>Command '{0}' could not be executed because it was invalid. Errors: {1}.</value>
-  </data>
-  <data name="MemoryCache_NullValueCreated" xml:space="preserve">
-    <value>The value factory returned a null-value.</value>
-  </data>
-  <data name="MessageHanderPipeline_MultipleAttributesFound" xml:space="preserve">
-    <value>Multiple attributes of the specified type were found when only a single was expected: {0}.</value>
-  </data>
-  <data name="MessageHandlerClass_InvalidInstanceLifetimeMode" xml:space="preserve">
-    <value>Invalid InstanceLifetime was specified on class '{0}': {1}. </value>
-  </data>
-  <data name="Message_InvalidOption" xml:space="preserve">
-    <value>Unknown value of type '{0}' specified: {1}.</value>
-  </data>
-  <data name="Message_IsReadOnly" xml:space="preserve">
-    <value>Cannot mark message '{0}' as changed because it is marked readonly.</value>
-  </data>
-  <data name="Message_ServiceAlreadyRegistered" xml:space="preserve">
-    <value>A service of type '{0}' was already registered.</value>
-  </data>
-  <data name="Progress_NegativeValue" xml:space="preserve">
-    <value>Parameter '{0}' cannot be negative: {1}.</value>
-  </data>
-  <data name="Progress_ValueOutOfRange" xml:space="preserve">
-    <value>Invalid value specified: {0}. Value must be within range of [{1}, {2}].</value>
-  </data>
-  <data name="ObjectCacheValueLifetime_AlreadyStarted" xml:space="preserve">
-    <value>Cannot start this lifetime because it has been already started once.</value>
-  </data>
-  <data name="ObjectCacheValueLifetime_OtherAlreadyStarted" xml:space="preserve">
-    <value>Cannot combine this lifetime with the other because the other has already started.</value>
-  </data>
-  <data name="ObjectCacheValueLifetime_ThisAlreadyStarted" xml:space="preserve">
-    <value>Cannot combine this lifetime with another because it has already started.</value>
-  </data>
-  <data name="Scope_IncorrectNesting" xml:space="preserve">
-    <value>The scopes were not nested correctly.</value>
-  </data>
-  <data name="SynchronizationContextScope_ContextNotSet" xml:space="preserve">
-    <value>Cannot execute this method because the current SynchronizationContext is null.</value>
-  </data>
-  <data name="TimerBasedLifetime_ZeroLifetime" xml:space="preserve">
-    <value>The length of a lifetime cannot be zero.</value>
-  </data>
-  <data name="UnitOfWorkContext_FailedToEnlistUnitOfWork" xml:space="preserve">
-    <value>Failed to enlist '{0}' because no context was found.</value>
-  </data>
-  <data name="UnitOfWorkScope_IncorrectNestingOrWrongThread" xml:space="preserve">
-    <value>The scope was incorrectly nested or was called from a different thread than it was created on.</value>
-  </data>
-  <data name="UnitOfWorkScope_ScopeAlreadyCompleted" xml:space="preserve">
-    <value>The scope has already completed.</value>
-  </data>
-  <data name="WritableEventStream_MissingEventHandler" xml:space="preserve">
-    <value>No event-handler was specified for domain-event of type '{0}'.</value>
-  </data>
-  <data name="RequiredAttribute_InvalidStringConstraint" xml:space="preserve">
-    <value>Invalid value for StringConstraint specified: {0}.</value>
+  <data name="Required_MissingRequiredValue" xml:space="preserve">
+    <value>Property '{0}' is required but was not specified.</value>
   </data>
 </root>
