- Refactored the FluentValidator et al. to support both eager and lazy validation.

--- a/Messaging/Resources/ExceptionMessages.resx
+++ b/Messaging/Resources/ExceptionMessages.resx
@@ -225,4 +225,7 @@
   <data name="Range_InvalidRange" xml:space="preserve">
     <value>The specified range is not valid: {0}.</value>
   </data>
+  <data name="MemberSet_MemberAlreadyAdded" xml:space="preserve">
+    <value>A member with name '{0}' has already been added to the set.</value>
+  </data>
 </root>
